# safe-sim2real

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  check_rccar.py  euler_guide.md  eval_policy.py  eval_policy_seeds.py  hello.onnx  main.py  optuna_tuning.py  ppo_joystick_baseline.py  pyproject.toml  rccar_hardware.py  setup.bash  train_brax.py  train_brax_ppo.py  train_brax_sac.py  train_brax_ssac.py  train_model_play_ppo.py
.github/workflows/: ci.yaml
docs/policies/RAMU/: sac_7o8pv3e7.onnx  sac_barpocbl.onnx  sac_nejwgctt.onnx  sac_onnddq95.onnx  sac_tbbvdmij.onnx
docs/policies/SAC/: sac_6tlvumqh.onnx
docs/policies/SPiDR/: sac_2j3klu63.onnx  sac_5wmsouf5.onnx  sac_6jr7iop1.onnx  sac_6n1he9c1.onnx  sac_ddkde93h.onnx
docs/policies/domain_randomisation/: sac_81dgckxq.onnx  sac_8fhqmagq.onnx
docs/policies/domain_randomization/: sac_15bndpab.onnx  sac_4mv5ivhm.onnx
franka_experiments/: debug_image.py  params.pkl  sac_vision_flax_to_onnx.py  test_image.py  test_onnx_conversion.py
go1_experiments/: flax_to_onnx.py  ppo_flax_to_onnx.py  ppo_joystick_baseline.py  sac_flax_to_onnx.py
paper/: ablate_num_envs.py  cartpole_disagreement.py  cartpole_disagreement_action.py  compare_baselines_cartpole.py  go1_lambda_ablation.py  go1_lambda_ablation_ppo.py  joint_limits_experiment.csv  pareto.py  ppo_learning_curves.py  preliminary.py  rccar_experiment.csv  rccar_sim_to_real.py  rccar_sim_to_real_new.py  real_comparion.py  runtime_performance_envs_tradeoff.py  simulated.py  simulated_costs.py  simulated_learning_curves.py  simulated_percentage.py  teaser.py  teaser_generate_data.py  teaser_trajectory.py  tune_lambda.py
rccar_experiments/: check_rccar.py  collect_trajectory.py  experiment_driver.py  logger.py  online_learning.py  plot.py  rccar_hardware.py  session.py  transitions_server.py  utils.py
ss2r/algorithms/: penalizers.py  state_sampler.py
ss2r/algorithms/jax/: state_sampler.py
ss2r/algorithms/mb_ppo/: __init__.py  cem.py  data.py  eval_model.py  losses.py  model.py  model_env.py  model_train_step.py  networks.py  old_model.py  old_train.py  pre_train_model.py  test_train_model.py  train.py  training_step.py  training_step_model.py
ss2r/algorithms/mbpo/: __init__.py  data.py  losses.py  model_env.py  networks.py  safe_rollout.py  safety_filters.py  train.py  training_step.py  types.py  vision_networks.py  wrappers.py
ss2r/algorithms/ppo/: __init__.py  losses.py  networks.py  train.py  training_step.py  wrappers.py
ss2r/algorithms/sac/: __init__.py  data.py  franka_sac_to_onnx.py  go1_sac_to_onnx.py  gradients.py  losses.py  networks.py  penalizers.py  pytree_uniform_sampling_queue.py  q_transforms.py  rae.py  robustness.py  train.py  training_step.py  types.py  vision_networks.py  wrappers.py
ss2r/algorithms/ssac/: replay_buffer.py  safe_actor_critic.py  ssac.py
ss2r/benchmark_suites/: __init__.py  rewards.py  utils.py  wrappers.py
ss2r/benchmark_suites/brax/: __init__.py  cartpole.py  rewards.py
ss2r/benchmark_suites/dm_control/: __init__.py
ss2r/benchmark_suites/extreme_parkour/: README.md  bridge.py  test.py
ss2r/benchmark_suites/mujoco_playground/: __init__.py
ss2r/benchmark_suites/rccar/: hardware.py  model.py  rccar.py
ss2r/benchmark_suites/safe_adaptation_gym/: __init__.py
ss2r/benchmark_suites/safety_gym/: __init__.py  go_to_goal.py  lidar.py  play.py  point.xml
ss2r/common/: double_buffer.py  learner.py  logging.py  math.py  pytree.py  pytree_utils.py  wandb.py
ss2r/configs/: check_rccar.yaml  config.yaml  rccar_hardware.yaml  rccar_online_learning.yaml  train_brax.yaml
ss2r/configs/agent/: mb_ppo.yaml  mbpo.yaml  ppo.yaml  sac.yaml  sac_lenart.yaml  ssac.yaml
ss2r/configs/environment/: aloha_peg_insert.yaml  ant.yaml  brax.yaml  brax_base.yaml  cartpole.yaml  cartpole_swingup.yaml  dm_cartpole.yaml  extreme_parkour.yaml  extremeparkour.yaml  extremewalking.yaml  fast.yaml  franka_emika_panda.yaml  go1_joystick.yaml  go2_joystick.yaml  go_to_goal.yaml  go_to_goal_easy.yaml  humanoid.yaml  humanoid_walk.yaml  inverted_pendulum.yaml  mujoco_playground_base.yaml  quadruped.yaml  rccar.yaml  rccar_real.yaml  safe_adaptation_gym.yaml  safety_gym_base.yaml  walker.yaml  walker2d.yaml
ss2r/configs/experiment/: aloha_peg_insert_sim.yaml  ant_sim_to_sim.yaml  ant_simple.yaml  cartpole.yaml  cartpole_mbpo.yaml  cartpole_mbpo_safe.yaml  cartpole_mbpo_sooper.yaml  cartpole_sim_to_sim.yaml  cartpole_sim_to_sim_nominal.yaml  cartpole_sim_to_sim_nominal_ppo.yaml  cartpole_sim_to_sim_ppo.yaml  cartpole_sim_to_sim_ramu.yaml  cartpole_simple.yaml  cartpole_simple_mb_ppo.yaml  cartpole_simple_ppo.yaml  cartpole_spidr_vision.yaml  cartpole_spidr_vision_backup.yaml  cartpole_swingup_backup.yaml  cartpole_swingup_collect_offline.yaml  cartpole_swingup_mbpo.yaml  cartpole_swingup_mbpo_offline.yaml  cartpole_swingup_mbpo_sooper.yaml  cartpole_swingup_mbpo_sooper_lagrangian.yaml  cartpole_swingup_sim_to_sim.yaml  cartpole_swingup_sim_to_sim_backup_sooper.yaml  cartpole_swingup_sim_to_sim_dr.yaml  cartpole_swingup_sim_to_sim_nominal.yaml  cartpole_swingup_simple.yaml  cartpole_swingup_simple_sac_saute.yaml  cartpole_swingup_sparse.yaml  cartpole_swingup_sparse_mbpo.yaml  cartpole_swingup_vision_mbpo.yaml  cartpole_swingup_vision_mbpo_baseline.yaml  cartpole_swingup_vision_mbpo_lagrangian.yaml  cartpole_swingup_vision_mbpo_sooper.yaml  cartpole_vision.yaml  cartpole_vision_perturbed.yaml  debug.yaml  extremewalking.yaml  fast_mb_ppo.yaml  (+97 more)
ss2r/rl/: acting.py  episodic_async_env.py  epoch_summary.py  evaluation.py  logging.py  metrics.py  online.py  trainer.py  trajectory.py  types.py  utils.py  wrappers.py
tests/: __init__.py  test_brax_adapter.py  test_cartpole.py  test_online_orchestrator.py  test_rccar.py  test_trainer.py
utility_scripts/: client.py  commands_for_euler_cuda.bash  dummy_zmq_server.py  setup.bash  setup_and_source.bash  train_jax_ppo.py
(+87 files in other folders)
