[tool.poetry]
name = "ss2r"
version = "0.1.0"
description = ""
authors = ["Yarden <yarden.as@inf.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
jmp = { git = "https://github.com/deepmind/jmp" }
jaxlib = { url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.4.9+cuda11.cudnn86-cp38-cp38-manylinux2014_x86_64.whl", extras = [
    "cuda11_pip",
] }
jax = "0.4.9"
optax = "0.1.7"
brax = "0.10.2"
tqdm = "^4.67.1"
hydra-core = "^1.3.2"
tabulate = "^0.9.0"
moviepy = "1.0.3"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
types-tabulate = "^0.9.0.20241207"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
ruff = "^0.9.6"
mypy = "1.8.0"
pre-commit = ">=3.5.0,<3.6.0"
tueplots = ">=0.0.14,<0.1.0"


[tool.poetry.group.wandb.dependencies]
wandb = "^0.19.6"


[tool.poetry.group.hydra-submitit.dependencies]
hydra-submitit-launcher = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
ignore = ["E731"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
show_column_numbers = true
disallow_untyped_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
strict_optional = true
