[tool.poetry]
name = "ss2r"
version = "0.1.0"
description = ""
authors = ["Yarden <yarden.as@inf.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6,<3.12"
mujoco = "^3.3.3"
mujoco-mjx = "^3.3.3"
jax = {version = "<0.6.0", extras = ["cuda12"]}
playground = "^0.0.4"
pyzmq = "^27.0.0"
hydra-core = "^1.3.2"
hydra-submitit-launcher = "^1.2.0"
tabulate = "^0.9.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
types-tabulate = "^0.9.0.20240106"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
tueplots = "^0.0.17"
ruff = "^0.9.6"

[tool.poetry.group.wandb.dependencies]
wandb = "^0.16.4"

[tool.poetry.group.hydra-submitit.dependencies]
hydra-submitit-launcher = "^1.2.0"


[tool.poetry.group.onnx.dependencies]
tf2onnx = "^1.16.1"
onnxruntime = "^1.20.1"
tensorflow-cpu = "2.13.0"
keras = ">=2.13.1"


[tool.poetry.group.madrona_mjx.dependencies]
madrona-mjx = {path = "../madrona_mjx", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
ignore = ["E731"]
exclude = [
    "papers",         # Exclude the papers folder
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
show_column_numbers = true
disallow_untyped_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
strict_optional = true
exclude = ["./papers"]
